<resources>
    <string name="app_name">PAMPAW_kotlin</string>
    <string name="signup_username">Username</string>
    <string name="signup_nif">Nif</string>
    <string name="signup_password">Password</string>
    <string name="signup_button">SignUp</string>
    <string name="signup_name">Name</string>
    <string name="login">Login</string>
    <string name="gosignup">SignUp</string>
    <string name="capture">Capture</string>
    <string name="capture_invoice_description">capture invoice</string>
    <string name="Get_Invoice_from_gallery">Choose</string>
    <string name="upload_image">Upload</string>
    <string name="button_get_invoices">Get Invoices</string>
    <string name="listInvoices">List Invoices</string>
    <string name="numbers">Numbers</string>
    <string name="images">IMAGES</string>
    <string name="button_delete_image">Delete</string>
    <string name="showInvoice">Show Invoice</string>
    <string name="file_paths">content://com.kijevigombooc.pirosfogo.fileprovider/my_images</string>
    <string name="capture_image">Capture Image</string>
    <string name="upload_captured_image">Upload</string>
    <string name="update_profile">Update</string>
    <string name="new_password">New Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="logout_button">Logout</string>
    <string name="go_add_invoice">Add Invoice</string>
</resources>