<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileActivity">

    <Button
        android:id="@+id/button_upload_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/update_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="151dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/floatingProfileback"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/editTextNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signup_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <EditText
        android:id="@+id/editTextUsernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signup_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameProfile" />

    <EditText
        android:id="@+id/editTextNewPasswordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNifProfile"
        app:layout_constraintTop_toBottomOf="@+id/editTextNifProfile" />

    <EditText
        android:id="@+id/editTextPasswordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_upload_profile"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewPasswordCheckProfile" />

    <EditText
        android:id="@+id/editTextNewPasswordCheckProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNewPasswordProfile"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPasswordProfile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingProfileback"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon.CenterStacked"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        android:tint="#040404"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        tools:ignore="PrivateResource" />

    <EditText
        android:id="@+id/editTextNifProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/signup_nif"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsernameProfile"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsernameProfile"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>